  Bugfixes:
    - Now unhighlights when you click anywhere on the Tier Menu
    - Rocket products now consider building the rocket instead of just the silo
    - Clicking on fluids now also highlight their dependents
    - Should no longer crash when changing the ignored recipes after loading a game
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2024-05-24
  Features:
    - Clicking on an item now highlights its dependents
    - Settings are now global and the list will be updated to match the settings
    - Add a setting to toggle on whether or not to consider technology when calculating
  Optimizations:
    - Now marks incalculable items and unmarks them once the blocking item is calculated
  Changes:
    - Left-most items are no longer reliably simpler than right-most items
  Bugfixes:
    - Fixed overriden base items not appearing in the tierlist
    - Fixed ignored recipes not being ignored
    - Fixed the technology decrement applying even when the tier was determined by the prerequesite instead of items
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2024-05-20
  Major Features:
    - Now has a UI to display the tiers!
  Features:
    - Add setting to decrement a technology tier. Meaning green science items can share a row with green science
  Changes:
    - Refactored the monolithic data-final-fixes.lua into multiple files
    - Changed from a startup script to runtime
    - Add MIT License I forgor to
  Bugfixes:
    - Fixed a handful of bugs that I spotted while refactoring to runtime. Theoretically added just as many bugs though.
    - Caught a possible invalid science pack not resulting in an invalid technology
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2024-05-18
  Features: