@@ -10,6 +10,7 @@ Date: ????
     - Rocket products now consider building the rocket instead of just the silo
     - Clicking on fluids now also highlight their dependents
     - Should no longer crash when changing the ignored recipes after loading a game
+    - Should actually update base items when the settings change
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 2024-05-24
